--- a/trackmania nds.html
+++ b/trackmania nds.html
@@ -1,1 +1,1 @@
-<iframe src="https://www.retrogames.cc/embed/38755-trackmania-ds-usa-en-fr-es.html" width="600" height="450" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>
+<iframe src="https://www.retrogames.cc/embed/38755-trackmania-ds-usa-en-fr-es.html" style="position:absolute;width:100%;height:100%;top:0;left:0;" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>
